[tool.poetry]
name = "rysk_client"
version = "0.2.1"
description = ""
authors = ["8baller <8ball030@gmail.com>"]
readme = "README.md"
packages = [
    { include = "rysk_client", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
ccxt = "^3.1.15"
rich-click = "^1.6.1"
websocket-client = "^1.6.1"
docker = "^6.1.3"
web3 = "^6.5.0"

[tool.poetry.group.dev.dependencies]
autonomy-dev = {extras = ["all"], version = "~0"}
# jupyterlab = "^4.0.1"
types-requests = "^2.31.0.1"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rysk = 'rysk_client.cli:cli'
